<resources>
    <string name="app_name">Marketplace</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbutton">LOGIN</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="txt_recommend">Lihat Barang Rekomendasi Dari Kami!</string>
    <string name="breakss">end.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>