<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adem"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:elevation="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ase"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/yud"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/yud"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="17sp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/ase"
                android:text="@string/loginbutton"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        <Button
            android:id="@+id/signupbutton"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/loginbutton"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/reda"
            android:fontFamily="@font/ase"
            android:text="Signup"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
        </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>